--- a/04_gan_01_dcgan_dcgan.ipynb
+++ b/04_gan_01_dcgan_dcgan.ipynb
@@ -23,7 +23,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://https://colab.research.google.com/github/KouichiMatsuda/GDL2/blob/main/04_gan_01_dcgan_dcgan.ipynb)"
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/KouichiMatsuda/GDL2/blob/main/04_gan_01_dcgan_dcgan.ipynb)"
       ],
       "metadata": {
         "id": "tmGuypcSI7-Z"
