--- a/03_vae_01_autoencoder_autoencoder.ipynb
+++ b/03_vae_01_autoencoder_autoencoder.ipynb
@@ -21,6 +21,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/KouichiMatsuda/GDL2/blob/main/03_vae_01_autoencoder_autoencoder.ipynb)"
+      ],
+      "metadata": {
+        "id": "Wesd8AcMZmZ0"
+      },
+      "id": "Wesd8AcMZmZ0"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "84acc7be-6764-4668-b2bb-178f63deeed3",
