--- a/04_gan_02_wgan_gp_wgan_gp.ipynb
+++ b/04_gan_02_wgan_gp_wgan_gp.ipynb
@@ -31,6 +31,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/KouichiMatsuda/GDL2/blob/main/4_gan_02_wgan_gp_wgan_gp.ipynb)"
+      ],
+      "metadata": {
+        "id": "V2ynuiuDZUNj"
+      },
+      "id": "V2ynuiuDZUNj"
+    },
+    {
       "cell_type": "code",
       "source": [
         "!mkdir data\n",
