--- a/06_normflow_01_realnvp_realnvp.ipynb
+++ b/06_normflow_01_realnvp_realnvp.ipynb
@@ -31,6 +31,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/KouichiMatsuda/GDL2/blob/main/06_normflow_01_realnvp_realnvp.ipynb)"
+      ],
+      "metadata": {
+        "id": "JruWZIMiZLSJ"
+      },
+      "id": "JruWZIMiZLSJ"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "84acc7be-6764-4668-b2bb-178f63deeed3",
