--- a/07_ebm_01_ebm_ebm.ipynb
+++ b/07_ebm_01_ebm_ebm.ipynb
@@ -31,6 +31,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/KouichiMatsuda/GDL2/blob/main/07_ebm_01_ebm_ebm.ipynb)"
+      ],
+      "metadata": {
+        "id": "dNBmG13wY_F9"
+      },
+      "id": "dNBmG13wY_F9"
+    },
+    {
       "cell_type": "code",
       "source": [
         "! mkdir checkpoints\n",
