--- a/08_diffusion_01_ddm_ddm.ipynb
+++ b/08_diffusion_01_ddm_ddm.ipynb
@@ -31,6 +31,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/KouichiMatsuda/GDL2/blob/main/08_diffusion_01_ddm_ddm.ipynb)"
+      ],
+      "metadata": {
+        "id": "GwUqc2FnYy2C"
+      },
+      "id": "GwUqc2FnYy2C"
+    },
+    {
       "cell_type": "code",
       "source": [
         "! mkdir notebooks\n",
