--- a/09_transformer_gpt_gpt.ipynb
+++ b/09_transformer_gpt_gpt.ipynb
@@ -32,6 +32,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/KouichiMatsuda/GDL2/blob/main/09_transformer_gpt_gpt.ipynb)"
+      ],
+      "metadata": {
+        "id": "5hLyAcw9YkYj"
+      },
+      "id": "5hLyAcw9YkYj"
+    },
+    {
       "cell_type": "code",
       "source": [
         "! mkdir data\n",
