--- a/11_music_01_transformer_transformer.ipynb
+++ b/11_music_01_transformer_transformer.ipynb
@@ -31,6 +31,16 @@
     {
       "cell_type": "markdown",
       "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/KouichiMatsuda/GDL2/blob/main/11_music_01_transformer_transformer.ipynb)"
+      ],
+      "metadata": {
+        "id": "ulnFDMK9YRXE"
+      },
+      "id": "ulnFDMK9YRXE"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**データのダウンロード**"
       ],
       "metadata": {
