--- a/11_music_02_musegan_musegan.ipynb
+++ b/11_music_02_musegan_musegan.ipynb
@@ -21,6 +21,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/KouichiMatsuda/GDL2/blob/main/11_music_02_musegan_musegan.ipynb)"
+      ],
+      "metadata": {
+        "id": "uihBTgaVYBVT"
+      },
+      "id": "uihBTgaVYBVT"
+    },
+    {
       "cell_type": "code",
       "source": [
         "! curl -O https://raw.githubusercontent.com/davidADSP/Generative_Deep_Learning_2nd_Edition/main/notebooks/11_music/02_musegan/musegan_utils.py"
