--- a/02_deeplearning_02_cnn_cnn.ipynb
+++ b/02_deeplearning_02_cnn_cnn.ipynb
@@ -21,6 +21,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/KouichiMatsuda/GDL2/blob/main/02_deeplearning_02_cnn_cnn.ipynb)"
+      ],
+      "metadata": {
+        "id": "v3XnGu1dZ6wi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**実行用の準備**"
       ],
       "metadata": {
