--- a/04_gan_03_cgan_cgan.ipynb
+++ b/04_gan_03_cgan_cgan.ipynb
@@ -43,7 +43,7 @@
       "source": [
         "!mkdir data\n",
         "%cd data\n",
-        "!!kaggle datasets download jessicali9530/celeba-dataset\n",
+        "!kaggle datasets download jessicali9530/celeba-dataset\n",
         "!unzip -q celeba-dataset.zip -d celeba-dataset; rm celeba-dataset.zip\n",
         "%cd .."
       ],
